FIX: fix logout user

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -10,4 +10,4 @@
   = button_to 'Регитсрация', new_user_registration_path, :method => 'get'
 %h3
   = button_to 'Войти', new_user_session_path, :method => 'get'
-  = button_to 'Выйти', cancel_user_registration_path, :method => 'destroy'
+  = button_to 'Выйти', destroy_user_session_path, :method => 'delete'
