CHANGE: add validations in User

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -14,3 +14,5 @@
     = button_to 'Регитсрация', new_user_registration_path, :method => 'get'
   %h3
     = button_to 'Войти', new_user_session_path, :method => 'get'
+
+= button_to 'Список юзеров', users_path, :method => 'get'
