--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,3 +16,18 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+<script>
+$(document).ready(function () {
+$('#new_user').validate({
+debug: true,
+rules: {
+'user[name]': {required: true, minlength: 2},
+'user[login]': {required: true, minlength: 2},
+'user[email]': {required: true, email: true},
+'user[password]': {required: true, minlength: 7},
+'user[password_confirmation]': {required: true, equalTo: '#user_password'}
+}
+});
+});
+</script>
