FIX: fix for Oksana

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -7,12 +7,12 @@
   %br
 -if user_signed_in?
   %h3
-    = button_to 'Выйти', destroy_user_session_path, :method => 'delete'
-    = button_to 'Редактироать профиль', edit_user_registration_path, :method => 'get'
+    = link_to 'Выйти', destroy_user_session_path, :method => 'delete'
+    = link_to 'Редактироать профиль', edit_user_registration_path, :method => 'get'
 -else 
   %h2
-    = button_to 'Регитсрация', new_user_registration_path, :method => 'get'
+    = link_to 'Регитсрация', new_user_registration_path, :method => 'get'
   %h3
-    = button_to 'Войти', new_user_session_path, :method => 'get'
+    = link_to 'Войти', new_user_session_path, :method => 'get'
 
-= button_to 'Список юзеров', users_path, :method => 'get'
+= link_to 'Список юзеров', users_path, :method => 'get'
