--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -8,11 +8,31 @@
 -if user_signed_in?
   %h3
     = link_to 'Выйти', destroy_user_session_path, :method => 'delete'
-    = link_to 'Редактироать профиль', edit_user_registration_path, :method => 'get'
+    %br
+    = link_to 'Редактироать профиль', edit_user_registration_path, :method => 'get', class: :'btn btn-success'
+    %br
 -else 
   %h2
     = link_to 'Регитсрация', new_user_registration_path, :method => 'get'
+    %br
   %h3
     = link_to 'Войти', new_user_session_path, :method => 'get'
+    %br
 
 = link_to 'Список юзеров', users_path, :method => 'get'
+%title
+  %form.form-horizontal
+    .control-group
+      %label.control-label{:for => "inputEmail"} Email
+      .controls
+        %input#inputEmail{:placeholder => "Email", :type => "text"}
+    .control-group
+      %label.control-label{:for => "inputPassword"} Пароль
+      .controls
+        %input#inputPassword{:placeholder => "Пароль", :type => "password"}
+    .control-group
+      .controls
+        %label.checkbox
+          %input{:type => "checkbox"}
+            Запомнить меня
+        %button.btn{:type => "submit"} Войти
