--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -13,7 +13,7 @@
     %br
 -else 
   %h2
-    = link_to 'Регитсрация', new_user_registration_path, :method => 'get'
+    = link_to 'Регистрация', new_user_registration_path, :method => 'get'
     %br
   %h3
     = link_to 'Войти', new_user_session_path, :method => 'get'
