--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -11,6 +11,8 @@
     %br
     = link_to 'Редактироать профиль', edit_user_registration_path, :method => 'get', class: :'btn btn-success'
     %br
+    = link_to 'Список юзеров', users_path, :method => 'get'
+    
 -else 
   %h2
     = link_to 'Регистрация', new_user_registration_path, :method => 'get'
@@ -19,20 +21,4 @@
     = link_to 'Войти', new_user_session_path, :method => 'get'
     %br
 
-= link_to 'Список юзеров', users_path, :method => 'get'
-%title
-  %form.form-horizontal
-    .control-group
-      %label.control-label{:for => "inputEmail"} Email
-      .controls
-        %input#inputEmail{:placeholder => "Email", :type => "text"}
-    .control-group
-      %label.control-label{:for => "inputPassword"} Пароль
-      .controls
-        %input#inputPassword{:placeholder => "Пароль", :type => "password"}
-    .control-group
-      .controls
-        %label.checkbox
-          %input{:type => "checkbox"}
-            Запомнить меня
-        %button.btn{:type => "submit"} Войти
+= link_to 'Список вопросов', questions_path, :method => 'get'
