--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -7,18 +7,18 @@
   %br
 -if user_signed_in?
   %h3
-    = link_to 'Выйти', destroy_user_session_path, :method => 'delete'
-    %br
-    = link_to 'Редактироать профиль', edit_user_registration_path, :method => 'get', class: :'btn btn-success'
-    %br
-    = link_to 'Список юзеров', users_path, :method => 'get'
+    -#= link_to 'Выйти', destroy_user_session_path, :method => 'delete', class: :'btn btn-danger'
+    -#%br
+    -#= link_to 'Редактироать профиль', edit_user_registration_path, :method => 'get', class: :'btn btn-success'
+    -#%br
+    = link_to 'Список юзеров', users_path, :method => 'get', class: :'btn btn-info'
     
 -else 
   %h2
-    = link_to 'Регистрация', new_user_registration_path, :method => 'get'
+    = link_to 'Регистрация', new_user_registration_path, :method => 'get', class: :'btn btn-success'
     %br
   %h3
-    = link_to 'Войти', new_user_session_path, :method => 'get'
+    = link_to 'Войти', new_user_session_path, :method => 'get', class: :'btn btn-primary'
     %br
 
-= link_to 'Список вопросов', questions_path, :method => 'get'
+= link_to 'Список вопросов', questions_path, :method => 'get', class: :'btn btn-info'
