--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
         Панель пользователя
       </strong>
       
-      <%= link_to 'Редактироать профиль', edit_user_registration_path, :method => 'get', class: :'btn btn-success' %>
+      <%= link_to 'Редактировать профиль', edit_user_registration_path, :method => 'get', class: :'btn btn-success' %>
       <%= link_to 'Выйти', destroy_user_session_path, :method => 'delete', class: :'btn btn-danger' %>
     </div>
   </div>
