--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -9,7 +9,7 @@
   %h3
     -#= link_to 'Выйти', destroy_user_session_path, :method => 'delete', class: :'btn btn-danger'
     -#%br
-    -#= link_to 'Редактироать профиль', edit_user_registration_path, :method => 'get', class: :'btn btn-success'
+    -#= link_to 'Редактировать профиль', edit_user_registration_path, :method => 'get', class: :'btn btn-success'
     -#%br
     = link_to 'Список юзеров', users_path, :method => 'get', class: :'btn btn-info'
     
