--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,9 +47,14 @@
       <strong>
         Панель пользователя
       </strong>
-      
-      <%= link_to 'Редактировать профиль', edit_user_registration_path, :method => 'get', class: :'btn btn-success' %>
-      <%= link_to 'Выйти', destroy_user_session_path, :method => 'delete', class: :'btn btn-danger' %>
+      <% if user_signed_in? %>
+      <div class="btn-group btn-group-vertical">
+        <%= link_to 'Редактировать профиль', edit_user_registration_path, :method => 'get', class: :'btn btn-success' %>
+        <%= link_to 'Выйти', destroy_user_session_path, :method => 'delete', class: :'btn btn-danger' %>
+      </div>
+      <% else %>
+        <%= render template: 'devise/sessions/new' %>
+      <% end %>
     </div>
   </div>
 </div>
