--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -17,6 +17,9 @@
             |
           - if can? :destroy, q
             = link_to 'delete', question_path(q), method: :delete, data: { confirm: 'sure?' }
+        %td
+          = link_to 'New answer', new_question_answer_path(q.id), class: :'btn btn-small btn-success'
+
 
 = link_to 'New', new_question_path, class: :'btn btn-success'
 = link_to 'Список тестов', test_lists_path, class: :'btn btn-info'
