--- a/app/views/answers/_form.html.haml
+++ b/app/views/answers/_form.html.haml
@@ -1,3 +1,6 @@
 = simple_nested_form_for [@question, @answer] do |a|
   = a.input :text 
+  = a.input :answer_value
   = a.submit
+
+  = link_to 'Назад', question_answers_path, class: :'btn btn-success'
