--- a/app/views/answers/index.html.haml
+++ b/app/views/answers/index.html.haml
@@ -13,10 +13,10 @@
         %td= a.answer_value
         %td
           - if can? :update, a
-            = link_to 'Edit', edit_question_answer_path(a)
+            = link_to 'Edit', edit_question_answer_path(@question,a), class: :'btn btn-small btn-success'
             |
           - if can? :destroy, a
-            = link_to 'delete', question_answer_path(a), method: :delete, data: { confirm: 'sure?' }
+            = link_to 'delete', question_answer_path(@question,a), method: :delete, data: { confirm: 'sure?' }, class: :'btn btn-small btn-danger'
 
 
 = link_to 'New', new_question_answer_path, class: :'btn btn-success'
