ADD: link to users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,10 @@
             <%= link_to "Новости",       '#' %>
           </li>
           <li>
-            <%= link_to "Список тестов", questions_path %>
+            <%= link_to "Список тестов", test_lists_path %>
           </li>
           <li>
-            <%= link_to "Рейтинг",       '#' %>
+            <%= link_to "Рейтинг",       users_path %>
           </li>
         </ul>
       </nav>
